crates/swc_ecma_parser/tests/test262-error-references/fail/a5370cb0412d7c8a.js.stderr
error: Identifier cannot follow number
 --> $DIR/tests/test262-parser/fail/a5370cb0412d7c8a.js:1:4
  |
1 | 0x3in[]
  |    ^

